<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#262b32">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/option"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_del"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/del"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_copy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/copy"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_move"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/move"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_rename"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/rename"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_permissionset"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/permission_set"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_property"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/property"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_sendto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/send_to"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_compress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/compress_sel_dir"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#67717e" />

        <TextView
            android:id="@+id/listview_item_longclick_createlink"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_menu_backgroud"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/create_link"
            android:textColor="#ffffff"
            android:textSize="@dimen/floor_menu_front_size" />
    </LinearLayout>

</ScrollView>