<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#262b32">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#67717e" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:text="@string/total_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:text="@string/copy_ed"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:textColor="#ffffff"
        android:text="@string/copy_ing"/>

    <ProgressBar
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:max="100"
        android:progress="10"
        android:progressDrawable="@drawable/progress" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#67717e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/progress_dialog_cancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/app_menu_backgroud"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#f4f3f3"
                    android:textSize="@dimen/floor_menu_front_size" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="#67717e" />
                <TextView
                    android:id="@+id/progress_dialog_backrun"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/app_menu_backgroud"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/back_run"
                    android:textColor="#f4f3f3"
                    android:textSize="@dimen/floor_menu_front_size" />
        </LinearLayout>

</LinearLayout>