<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#262b32"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:paddingLeft="15dp"
        android:text="@string/search"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/floor_menu_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:background="@null"
        android:inputType="textNoSuggestions"
        android:textCursorDrawable="@drawable/edit_cursor_bg"
        android:textSize="@dimen/floor_menu_front_size"
        android:textColor="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#67717e" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/floor_menu_search_cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@drawable/app_menu_backgroud"
        android:clickable="true"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:text="@string/cancel"
        android:textSize="@dimen/floor_menu_front_size"
        android:textColor="#ffffff" />

    <View
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="#67717e" />

    <TextView
        android:id="@+id/floor_menu_search_confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@drawable/app_menu_backgroud"
        android:clickable="true"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:text="@string/confirm"
        android:textSize="@dimen/floor_menu_front_size"
        android:textColor="#ffffff" />
</LinearLayout>
</LinearLayout>