<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dark_grey">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/tip"
            android:textColor="@color/wallet_holo_blue_light"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/wallet_holo_blue_light" />
        <TextView
            android:id="@+id/tip_content"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/tip"
            android:textColor="#ffffff"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#67717e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/tip_cancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/app_menu_backgroud"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#f4f3f3"
                    android:textSize="@dimen/floor_menu_front_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="#67717e" />

                <TextView
                    android:id="@+id/tip_confirm"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/app_menu_backgroud"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="#f4f3f3"
                    android:textSize="@dimen/floor_menu_front_size" />
        </LinearLayout>

</LinearLayout>